--- a/hpm/resources/P3.3-GPa-T1950-408psa-Fe-scan.cfg
+++ b/hpm/resources/P3.3-GPa-T1950-408psa-Fe-scan.cfg
@@ -35,7 +35,7 @@
     "Emin": 37.0,
     "bin_size": 8.0,
     "hard_core_limit": 1.3,
-    "inputdatadirectory": "/Users/hrubiak/GitHub/hp-edxd/hpm/resources/Fe1",
+    "inputdatadirectory": "C:/Users/hrubiak/Documents/GitHub/hp-edxd/hpm/resources/Fe1",
     "inputdataformat": 1,
     "itr_comp": 1.0,
     "mca_adc_shapingtime": 4e-06,
@@ -133,7 +133,7 @@
     ],
     "outputsavedirectory": "C:/Users/rhrubiak/Desktop/PEC work/Fe1/AO",
     "polynomial_deg": 5.0,
-    "q_spacing": 0.05,
+    "q_spacing": 0.03,
     "qmax": 14.0,
     "r_spacing": 0.05,
     "rho": 0.079598,
