--- a/hpm/resources/SiO2.cfg
+++ b/hpm/resources/SiO2.cfg
@@ -25,7 +25,7 @@
     "Emin": 32.0,
     "bin_size": 8.0,
     "hard_core_limit": 1.25,
-    "inputdatadirectory": "/Users/hrubiak/GitHub/hp-edxd/hpm/resources/mca_spectra",
+    "inputdatadirectory": "C:/Users/hrubiak/Documents/GitHub/hp-edxd/hpm/resources/mca_spectra",
     "inputdataformat": 1,
     "itr_comp": 1.0,
     "mca_adc_shapingtime": 4e-06,
@@ -181,7 +181,7 @@
     ],
     "outputsavedirectory": "./aEDXD/mca_spectra/Analysis_Output/",
     "polynomial_deg": 3.0,
-    "q_spacing": 0.05,
+    "q_spacing": 0.04,
     "qmax": 14.0,
     "r_spacing": 0.02,
     "rho": 0.08,
