--- a/axd/resources/aEDXD/P3.3-GPa-T1950-408psa-Fe-scan_ab5.cfg
+++ b/axd/resources/aEDXD/P3.3-GPa-T1950-408psa-Fe-scan_ab5.cfg
@@ -29,7 +29,7 @@
     "Emin": 38.0,
     "bin_size": 8.0,
     "hard_core_limit": 1.26,
-    "inputdatadirectory": "C:/Users/hrubiak/Documents/GitHub/hp-edxd/axd/resources/aEDXD/P3.3-GPa-T1950-408psa-Fe-scan",
+    "inputdatadirectory": "/Users/hrubiak/GitHub/hp-edxd/hpm/resources/Fe1",
     "inputdataformat": 1,
     "itr_comp": 1,
     "mca_adc_shapingtime": 4e-06,
@@ -160,5 +160,5 @@
             0.0597
         ]
     ],
-    "sq_smoothing_factor": 1.0
+    "sq_smoothing_factor": 2.0
 }
